AB#827 AW disable-btns + no-appt's feedback

--- a/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
@@ -16,7 +16,8 @@
     </ion-radio-group>
     <br>
     <ion-button [hidden]="!optionChoice" 
-                expand="block" 
+                expand="block"
+                [disabled]="optionSelected"
                 (click)="submitOption()">{{ 'shared.submit-button'|translate }}</ion-button>
   </dialogue-turn>
 </section>
