AB#762 small cleanup

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -1,5 +1,5 @@
 <section>
-  <dialogue-turn [actor]="program?.ngo">
+  <dialogue-turn [actor]="program?.ngo" [hidden]="!programTitle">
     <p [innerHTML]="'personal.enroll-in-program.introduction'|translate:{ programTitle:programTitle }"></p>
     <p>
       {{ 'personal.enroll-in-program.introduction-questions'|translate }}
