--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -17,7 +17,7 @@
                 class="ion-no-padding ion-text-wrap"
       >
         <ion-label>
-          {{ program.title }}
+          {{program.ngo}}: {{ program.title }}
           <br>
           <ion-note class="ion-text-wrap">
             {{ program.description }}
