Added count down timer to the AP app AB#498

--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -126,6 +126,9 @@
   >
     <p>
       {{ 'personal.select-appointment.qr-code'|translate }}
+      {{ 'personal.select-appointment.meeting-count-down'|translate }}
+      {{ daysToMeeting }}
+
     </p>
     <div *ngIf="qrDataString"
          text-center
