--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -104,6 +104,28 @@
     <p>
       {{ 'personal.select-appointment.conclusion'|translate }}
     </p>
+  </dialogue-turn>
+  <dialogue-turn [actor]="ngo"
+                 *ngIf="qrDataShow"
+                 [isSpoken]="qrDataShow"
+  >
+    <p>
+      {{ 'personal.select-appointment.meeting-reminder'|translate }}
+    </p>
+    <p>
+      {{ 'personal.select-appointment.from'|translate }}:
+      <strong>
+        {{ chosenTimeslot.startDate|date:dateFormat }}: {{ chosenTimeslot.startDate|date:timeFormat }}
+      </strong>
+      <br>
+      {{ 'personal.select-appointment.till'|translate }}:
+      <strong>
+        {{ chosenTimeslot.endDate|date:dateFormat }}: {{ chosenTimeslot.endDate|date:timeFormat }}
+      </strong>
+      <br>
+      {{ 'personal.select-appointment.at'|translate }}:
+      <strong>{{ chosenTimeslot.location }}</strong>
+    </p>
     <p>
       {{ 'personal.select-appointment.documents'|translate }}
     </p>
@@ -119,16 +141,8 @@
         {{ 'personal.select-appointment.more-info-documents'|translate }}
       </ion-button>
     </p>
-  </dialogue-turn>
-  <dialogue-turn [actor]="ngo"
-                 *ngIf="qrDataShow"
-                 [isSpoken]="qrDataShow"
-  >
     <p>
       {{ 'personal.select-appointment.qr-code'|translate }}
-      {{ 'personal.select-appointment.meeting-count-down'|translate }}
-      {{ daysToMeeting }}
-
     </p>
     <div *ngIf="qrDataString"
          text-center
@@ -139,5 +153,16 @@
               level="H"
       ></qrcode>
     </div>
+  </dialogue-turn>
+  <dialogue-turn [actor]="ngo"
+                  *ngIf="qrDataShow && !meetingPast"
+                  [isSpoken]="qrDataShow">
+    <p *ngIf="!meetingTomorrow && !meetingToday" [innerHTML]="'personal.select-appointment.meeting-count-down'|translate:{ daysToMeeting:daysToMeeting, dayDays:dayDays }"></p>
+    <p *ngIf="meetingTomorrow">
+      {{ 'personal.select-appointment.meeting-tomorrow'|translate }}
+    </p>
+    <p *ngIf="meetingToday">
+      {{ 'personal.select-appointment.meeting-today'|translate }}
+    </p>
   </dialogue-turn>
 </section>
