--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,5 +1,5 @@
 <section>
-  <dialogue-turn actor="NGO"
+  <dialogue-turn [actor]="ngo"
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
