AB#795 HO-name retrieved from program-object

--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -1,5 +1,5 @@
 <section>
-  <dialogue-turn actor="NGO">
+  <dialogue-turn [actor]="ngo">
     <p>
       {{ 'personal.handle-proof.creating'|translate }}
     </p>
@@ -8,7 +8,7 @@
     </p>
   </dialogue-turn>
 
-  <dialogue-turn actor="NGO"
+  <dialogue-turn [actor]="ngo"
                  *ngIf="inclusionStatus"
                  [isSpoken]="inclusionStatus"
   >
