AB#878 (change) to (input) for numeric/text fields

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -39,7 +39,7 @@
                    inputmode="numeric"
                    pattern="[0-9]*"
                    [name]="question.code"
-                   (change)="changeAnswers($event)"
+                   (input)="changeAnswers($event)"
                    [disabled]="hasAnswered"
         ></ion-input>
       </div>
@@ -54,7 +54,7 @@
       <div *ngSwitchDefault>
         <ion-input type="text"
                    [name]="question.code"
-                   (change)="changeAnswers($event)"
+                   (input)="changeAnswers($event)"
                    [disabled]="hasAnswered"
         ></ion-input>
       </div>
