AB#894 add subDirPath for 121-avatar-img on server

--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -9,7 +9,7 @@
 >
   <div class="dialogue-turn--actor">
     <ion-avatar *ngIf="actor === 'system'" style="border-radius: 0 !important;">
-      <img src="../../../assets/avatar--121.svg">
+      <img src={{imgPath}}>
     </ion-avatar>
     <ion-avatar *ngIf="actor === 'self'" style="background:#2f4bfd; display:flex;">
       <ion-icon name="person" color="white" size="large" style="margin:auto;"></ion-icon>
