AB#895 AW-app as web-app

--- a/interfaces/AW-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/AW-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -7,10 +7,10 @@
 >
   <div class="dialogue-turn--actor">
     <ion-avatar *ngIf="actor === 'system'">
-      <img src="../../../assets/avatar--121.svg">
+      <img src={{imgPath121}}>
     </ion-avatar>
     <ion-avatar *ngIf="actor === 'self'">
-      <img src="../../../assets/avatar.svg">
+      <img src={{imgPathSelf}}>
     </ion-avatar>
     <ion-avatar *ngIf="actor === 'ho'" style="color:black; background:white; display:flex;">
       <b style="margin:auto">HO</b>
