AB#945 feedback if username not unique

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -97,6 +97,13 @@
         {{ 'personal.create-password.unequal-passwords'|translate }}
       </p>
     </dialogue-turn>
+    <dialogue-turn *ngIf="usernameNotUnique"
+                   [isSpoken]="usernameNotUnique"
+    >
+      <p>
+        {{ 'personal.create-password.username-not-unique'|translate }}
+      </p>
+    </dialogue-turn>
     <dialogue-turn *ngIf="isDisabled"
                    [isSpoken]="isDisabled"
     >
