AB#953 added login-component

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -1,4 +1,4 @@
-<section #createPassword>
+<section #createIdentity>
     <dialogue-turn>
       <p>
         {{ 'personal.create-identity.introduction'|translate }}
