Fix typo in attribute-name

--- a/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
+++ b/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
@@ -10,7 +10,7 @@
         <ion-textarea name="needs"
                       [(ngModel)]="needs"
                       ngDefaultControl
-                      autoGrow="true"
+                      auto-grow="true"
                       spellcheck="true"
                       wrap="soft"
                       rows="3"
