AB#938 fix build error

--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -18,7 +18,7 @@
 
     <ion-fab-button size="small" 
                     [color]="accountBtnColor" 
-                    (click)="accountPopover()"
+                    (click)="accountPopover($event)"
     >
       <ion-icon name="person" size="large"></ion-icon>
     </ion-fab-button>
