AB#970 prime logout-function

--- a/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
@@ -52,6 +52,9 @@
     </p>
     <p *ngIf="phoneSkipped">
       {{ 'personal.phone-number.conclusion2'|translate }}
+    </p><br>
+    <p>
+      {{ 'personal.phone-number.logout-info'|translate }}
     </p>
   </dialogue-turn>
 </section>
