AB#954 handle new web-app features in native app

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -109,6 +109,9 @@
     >
       <p>
         {{ 'personal.create-identity.conclusion'|translate }}
+      </p><br>
+      <p *ngIf="!useLocalStorage">
+        {{ 'personal.create-identity.conclusion-web'|translate }}
       </p>
     </dialogue-turn>
   </section>
