--- a/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
@@ -53,7 +53,7 @@
     <p *ngIf="phoneSkipped">
       {{ 'personal.phone-number.conclusion2'|translate }}
     </p><br>
-    <p>
+    <p *ngIf="!useLocalStorage">
       {{ 'personal.phone-number.logout-info'|translate }}
     </p>
   </dialogue-turn>
