Support init-from-history for "select-language"-component

--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -8,7 +8,10 @@
       </ion-button>
     </p>
   </dialogue-turn>
-  <dialogue-turn actor="self">
+  <dialogue-turn actor="self"
+                 *ngIf="!isDisabled"
+                 [isSpoken]="!isDisabled"
+  >
     <form>
       <ion-radio-group (ionChange)="changeLanguage($event)">
         <ion-item *ngFor="let language of languages"
@@ -16,20 +19,28 @@
                   class="ion-no-padding ion-text-wrap"
         >
           <ion-label>{{ language.language }}</ion-label>
-          <ion-radio [value]="language.id"
-                     [disabled]="isDisabled"
-          ></ion-radio>
+          <ion-radio [value]="language.id"></ion-radio>
         </ion-item>
       </ion-radio-group>
       <div class="ion-margin-top">
         <ion-button type="submit"
-                    *ngIf="languageChoice && !isDisabled"
+                    *ngIf="languageChoice"
                     (click)="submitLanguage()"
-                    [disabled]="isDisabled"
                     expand="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </div>
     </form>
+  </dialogue-turn>
+  <dialogue-turn actor="self"
+                 *ngIf="isDisabled"
+                 [isSpoken]="isDisabled"
+  >
+    <ion-item color="light"
+              class="ion-no-padding ion-text-wrap"
+    >
+      <ion-label>{{ languageChoiceName }}</ion-label>
+      <ion-radio checked="true" disabled="true"></ion-radio>
+    </ion-item>
   </dialogue-turn>
   <dialogue-turn *ngIf="isDisabled"
                  [isSpoken]="isDisabled"
