Support init-from-history for "create-identity"-component

--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -10,7 +10,10 @@
         </ion-button>
       </p>
     </dialogue-turn>
-    <dialogue-turn *ngIf="useLocalStorage">
+    <dialogue-turn isConnected="true"
+                   *ngIf="useLocalStorage"
+                   [isSpoken]="useLocalStorage"
+    >
       <p>
         {{ 'personal.create-identity.password-only'|translate }}
       </p>
@@ -21,7 +24,10 @@
         </ion-button>
       </p>
     </dialogue-turn>
-    <dialogue-turn *ngIf="!useLocalStorage">
+    <dialogue-turn isConnected="true"
+                   *ngIf="!useLocalStorage"
+                   [isSpoken]="!useLocalStorage"
+    >
       <p>
         {{ 'personal.create-identity.username-password'|translate }}
       </p>
