--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -11,30 +11,31 @@
     </p>
   </dialogue-turn>
   <dialogue-turn actor="self">
-    <ion-radio-group (ionChange)="changeProgram($event)">
-      <ion-item *ngFor="let program of programs"
-                color="light"
-                class="ion-no-padding ion-text-wrap"
-      >
-        <ion-label>
-          {{program.ngo}}: {{ program.title }}
-          <br>
-          <ion-note class="ion-text-wrap">
-            {{ program.description }}
-          </ion-note>
-        </ion-label>
-        <ion-radio [value]="program.id"
-                   [disabled]="isDisabled"
-        ></ion-radio>
-      </ion-item>
-    </ion-radio-group>
-    <div class="ion-margin-top">
-      <ion-button *ngIf="programChoice && !isDisabled"
-                  (click)="submitProgram()"
-                  [disabled]="isDisabled"
-                  type="submit"
-                  expand="block"
-      >{{ 'shared.submit-button'|translate }}</ion-button>
-    </div>
+    <form (submit)="submitProgram()">
+      <ion-radio-group (ionChange)="changeProgram($event)">
+        <ion-item *ngFor="let program of programs"
+                  color="light"
+                  class="ion-no-padding ion-text-wrap"
+        >
+          <ion-label>
+            {{program.ngo}}: {{ program.title }}
+            <br>
+            <ion-note class="ion-text-wrap">
+              {{ program.description }}
+            </ion-note>
+          </ion-label>
+          <ion-radio [value]="program.id"
+                     [disabled]="isDisabled"
+          ></ion-radio>
+        </ion-item>
+      </ion-radio-group>
+      <div class="ion-margin-top">
+        <ion-button type="submit"
+                    *ngIf="programChoice && !isDisabled"
+                    [disabled]="isDisabled"
+                    expand="block"
+        >{{ 'shared.submit-button'|translate }}</ion-button>
+      </div>
+    </form>
   </dialogue-turn>
 </section>
