--- a/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/phone-number/phone-number.component.html
@@ -18,7 +18,7 @@
   <dialogue-turn actor="self">
     <form (ngSubmit)="submitPhoneNumber(phone)">
       <ion-label>{{ 'personal.phone-number.input-label'|translate }}</ion-label>
-      <ion-input type="number"
+      <ion-input type="text"
                  name="phone"
                  [(ngModel)]="phone"
                  ngDefaultControl
